@@ -1,4 +1,4 @@
-$Id: History,v 1.57 2002-05-06 09:32:39 maire Exp $
+$Id: History,v 1.58 2002-05-24 11:36:13 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -17,6 +17,11 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
      
+24 may 02: mma (stand-V04-00-11) 
+- G4PAIonosation: production of delta-electrons > cut
+- a bug fixed in G4PAIxSection.cc for GenericIon
+- G4PAIxSection : new class members for transverse/longitudinal transfer
+     
 06 may 02: mma (stand-V04-00-10)
 - compilation error in G4GammaConversionToMuons
      
@@ -33,7 +38,7 @@ committal in the CVS repository !
   Simplify public interface.     
      
 27 mar 02: V.Ivanchenko (stand-V04-00-06)
-- G4hIonisation: Bug fix in scaling of lambda table
+- G4hIonisation: Bug fix in scaling of lambda tabledelta-electrons > cut
 
 26 mar 02: mma (stand-V04-00-05)
 - G4eIonisation: change access to cuts in BuildLossTables (V.Ivanchenko)
